@@ -100,6 +100,7 @@ struct itrm {
 	void *mouse_h;			/**< Mouse handle */
 	unsigned char *orig_title;	/**< For restoring window title */
 
+	int verase;			/**< Byte to map to KBD_BS, or -1 */
 	unsigned int blocked:1;		/**< Whether it was blocked */
 	unsigned int altscreen:1;	/**< Whether to use alternate screen */
 	unsigned int touched_title:1;	/**< Whether the term title was changed */
